chore: integrate and apply spotless